--- a/quarkus-greet/src/main/resources/application.properties
+++ b/quarkus-greet/src/main/resources/application.properties
@@ -1,7 +1,1 @@
-application.greeting.message=${APP_GREET}
-
-
-quarkus.jaeger.service-name=${JAEGER_SERVICE:zz-application}
-quarkus.jaeger.sampler-type=const
-quarkus.jaeger.sampler-param=1
-quarkus.jaeger.endpoint=${JAEGER_COLLECTOR:}
+application.greeting.message=${APP_GREET:"Default Greet!!"}
